--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     # pull_policy: always
     volumes:
       - ./assets/config.json:/usr/share/nginx/html/assets/config.json
-      - /frontend/nginx.con:/etc/nginx/conf.d/default.conf
+      # - /frontend/nginx.con:/etc/nginx/conf.d/default.conf
     # ports:
     #   - "81:80"
     restart: always
