--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,19 +9,16 @@ upstream frontend {
     keepalive 32;
 }
 
-# Main server block
 server {
     listen 80;
     server_name localhost;
 
-    # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-    # API routes - proxy to Node.js backend
     location /api/ {
         proxy_pass http://backend/;
         proxy_http_version 1.1;
@@ -36,7 +33,7 @@ server {
         proxy_connect_timeout 75s;
     }
 
-    # Health check endpoint for backend
+    # Health check endpoint for backend TODO
     # location /health {
     #     proxy_pass http://backend/health;
     #     proxy_http_version 1.1;
@@ -46,7 +43,7 @@ server {
     #     proxy_set_header X-Forwarded-Proto $scheme;
     # }
 
-    # Static files - serve from frontend container
+    # Static files - frontend container
     location / {
         proxy_pass http://frontend;
         proxy_http_version 1.1;
@@ -72,7 +69,7 @@ server {
     }
 }
 
-# Optional: HTTPS configuration
+# HTTPS configuration TODO
 # server {
 #     listen 443 ssl http2;
 #     server_name localhost;
@@ -87,6 +84,6 @@ server {
 #     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
 #     ssl_prefer_server_ciphers off;
 #
-#     # Same location blocks as HTTP configuration above
+#     # Same location blocks as HTTP configuration above TODO
 #     # ... (copy all location blocks from above)
 # }
