Fix: db path fix, mount issue resolved

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     container_name: backend
     # pull_policy: always
     volumes:
-      - ./data:/app/data
+      - ./data/blood_donation.db:/app/blood_donation.db
     restart: always
     environment:
       - NODE_ENV=production
